@@ -230,6 +230,8 @@ protected:
 #if LOGO_ANIMATION
 	bool animated_logo;
 #endif
+
+	bool moving_window;
 };
 
 
