@@ -1,3 +1,10 @@
+[b]Version 0.8.4[/b]:
+
+(2012-12-23)
+ * Ignore other mouse events if the window is been moved by dragging
+   the video area.
+
+
 [b]Version 0.8.3[/b]:
 
 (2012-12-20)
